--- a/pom.xml
+++ b/pom.xml
@@ -150,9 +150,14 @@
             <artifactId>oci-java-sdk-objectstorage</artifactId>
             <version>2.44.0</version>
         </dependency>
-
-
         <!-- end oci -->
+
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>[0.4, 0.5)</version>
+        </dependency>
+
     </dependencies>
 
     <build>
